syntax = "proto3";

package stream;

option go_package = "backend/internal/stream-ingest/proto";

// Define the gRPC service for the Stream Ingest Service
service StreamService {
    rpc StartStream (StreamRequest) returns (StreamResponse) {}
    rpc StopStream (StreamRequest) returns (StreamResponse) {}
    rpc ForwardMetadata (MetadataRequest) returns (MetadataResponse) {}
}

// Request message for starting/stopping streams
message StreamRequest {
    string stream_key = 1;
    string user_id = 2;
}

// Response message for stream operations
message StreamResponse {
    string status = 1;
    string message = 2;
}

// Request message for forwarding metadata
message MetadataRequest {
    string stream_key = 1;
    string metadata = 2;
}

// Response message for metadata forwarding
message MetadataResponse {
    string status = 1;
    string message = 2;
}